[package]
name = "axhv"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
log = "=0.4.21"
bitflags = "2.2"
spin = "0.9"

axstd = { workspace = true }

