[package]
name = "axhv"
edition = "2021"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
documentation.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
#axstd = { workspace = true }
axvm = { workspace = true }
axvcpu = { workspace = true }
axaddrspace = { workspace = true }
